--- a/css/stylesCarta.css
+++ b/css/stylesCarta.css
@@ -11,7 +11,7 @@ body {
 }
 /* Estilos contenedor principal de toda la pagina */
 .container-main {
-    height: 300vh;
+    height: 100%;
     background-color: black;
 }
 /* Estilos de la barra de navegacion de arriba*/
@@ -20,8 +20,11 @@ body {
     position: fixed;
     font-size: larger;
     width: 100vw;
-    padding-right: 10px;
-    padding-left: 10px;
+    padding-right: 20px;
+    padding-left: 5px;
+    margin-left: -12px;
+    z-index: 1;
+
 }
 
 /* Estilos del navbar desplegada en movil */
@@ -53,10 +56,18 @@ body {
     height: 150vh;
 }
 
-/* Estilos de la tercera row (parte inferior pagina) */
+
+/* Estilos de la tercera row (parte inferior pagina)
 .row3 {
     height: 10vh;
+} */
+
+.carta-izq{
+    height: 100%;
 }
+
+
+
 
 
 /* Media query para PC ordenador >1600px */
