--- a/css/stylesContacto.css
+++ b/css/stylesContacto.css
@@ -100,44 +100,49 @@ form label {
 /* Media query para PC ordenador >1600px */
 @media (min-width: 1600px) {
 
+    /* Estilos de los links del navbar */
     .navbar a {
         margin-left: 30px;
     }
-
+    /* Estilos de la imagen de los cards de la carta */
     .carta img {
         opacity: 0.8;
     }
-
+    /* Estilos del logo de la pagina */
     .imgLogo {
         width: 175px;
         height: 85px;
     }
 
+    /* Estilos del cuerpo de las cards del menu */
     .carta {
         width: 100%;
         background-color: transparent;
     }
-
     .cartas {
         margin: 0;
     }
 
+    /* Estilos del primer row (navbar) */
     .row1 {
         height: 15vh;
     }
-
+    /* Estilos del row de los parrafos */
     .row2 {
         height: 100%;
     }
 
+    /* Estilo del cuerpo del form */
     fieldset{
         width: 45%;
     }
+
+    /* Estilo de los inputs del form */
     .inputform {
-    
         margin-top: 10px;
         background-color: rgba(255, 255, 255, 0.719);
     }
+    /* Estilos del iframe del mapa */
     iframe{
         width: 50%;
     height: 50vh;
