--- a/css/stylesCarta.css
+++ b/css/stylesCarta.css
@@ -1,14 +1,4 @@
-/* Carga de fuente externa */
-@font-face {
-    font-family: Quicksand;
-    src: url("../fonts/Quicksand-Light.otf") format("opentype");
-}
 
-/* Paso la fuente a todo el documento */
-html,
-body {
-    font-family: Quicksand;
-}
 
 /* Estilos contenedor principal de toda la pagina */
 .container-main {
@@ -26,7 +16,6 @@ body {
     padding-left: 5px;
     margin-left: -12px;
     z-index: 1;
-
 }
 
 /* Estilos del navbar desplegada en movil */
@@ -50,7 +39,6 @@ body {
 /* Estilos de la primera row (navbar) */
 .row1 {
     height: 13vh;
-
 }
 
 /* Estilos de la segunda row (Texto descriptivo) */
@@ -61,7 +49,6 @@ body {
 /* Estilos al bloque de tarjetas de platos */
 .cartas {
     margin-left: 10px;
-
 }
 
 /* Estilos de cada tarjeta de cada plato */
@@ -107,29 +94,39 @@ body {
     .navbar a {
         margin-left: 30px;
     }
+
     /* Estilos de la imagen de los cards de la carta */
     .carta img {
         opacity: 0.8;
+        width: 40%;
     }
-     /* Estilos del logo de la pagina */
+
+    /* Estilos del logo de la pagina */
     .imgLogo {
         width: 175px;
         height: 85px;
     }
+
     /* Estilos del cuerpo de las cards del menu */
     .carta {
         width: 100%;
         background-color: transparent;
     }
 
+    .carta p {
+        font-size: large;
+    }
+
     .cartas {
         margin: 0;
     }
+
     /* Estilos del primer row (navbar) */
     .row1 {
         height: 15vh;
     }
-     /* Estilos del row de los parrafos */
+
+    /* Estilos del row de los parrafos */
     .row2 {
         height: 100%;
 
