--- a/css/stylesContacto.css
+++ b/css/stylesContacto.css
@@ -83,7 +83,15 @@ form label {
     margin-bottom: 2px;
 }
 
+/* Media query para hacer responsive del ifram del mapa a partir de >768px */
 
+@media (min-width: 768px) {
+    iframe {
+        width: 50%;
+        height: 50vh;
+    }
+    
+}
 
 /* Media query para PC ordenador >1600px */
 @media (min-width: 1600px) {
